{
    "name": "CinemaControls",
    "maps": [
        {
            "name": "CinemaControlsBasic",
            "id": "4a096d8e-9023-4423-8901-38e2796c597a",
            "actions": [
                {
                    "name": "PlayPause",
                    "type": "Button",
                    "id": "a684cf31-958d-4db8-b76c-7fdba71f126d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Skip",
                    "type": "Value",
                    "id": "258c799c-8962-4113-842e-03efc64a1e12",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7aa66d93-3df7-4819-afb1-22bd93b25f5e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayPause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59f3e859-cd24-4083-b488-eea156b86ce6",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "fd66f151-1491-44e8-8993-ebe1f2774d5d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skip",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "fe5bce49-b66d-4b0d-b978-4b44c33ebb55",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skip",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "37f5debe-208f-4c52-85c4-8b3571a36e72",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skip",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "876e8498-579d-439c-b4ab-bf198c8cc17b",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skip",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "db6e3525-cd51-46d7-8753-e5391de78a61",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skip",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "ECSTest",
            "id": "adac73eb-1093-4726-8687-2ffb76260556",
            "actions": [
                {
                    "name": "SpawnEntity",
                    "type": "Button",
                    "id": "7d64d82d-54a6-4421-873a-2909f3d1aef1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0565aacf-43da-4521-a50c-cd9351577196",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnEntity",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}